// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerReviewStep should render for unvote transaction 1`] = `
<div>
  <div
    class="sc-AxjAm dnkyDE border-theme-neutral-300 dark:border-theme-neutral-800"
    type="horizontal"
  />
  <div
    class="flex flex-col space-y-2"
  >
    <h2
      class="text-2xl font-bold"
    >
      Transaction Details
    </h2>
    <div
      class="sc-AxhUy cgFciN"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Delegate PublicKey
        </div>
        <div
          class="font-semibold"
        >
          <span
            class="break-all"
          >
            -03df6cd794a7d404db4f1b25816d8976d0e72c5177d17ac9b19a92703b62cdbbbc
          </span>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ ml-6"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-AxhUy hoTjJf"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Transaction Fee
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReviewStep should render for vote transaction 1`] = `
<div>
  <div
    class="sc-AxjAm dnkyDE border-theme-neutral-300 dark:border-theme-neutral-800"
    type="horizontal"
  />
  <div
    class="flex flex-col space-y-2"
  >
    <h2
      class="text-2xl font-bold"
    >
      Transaction Details
    </h2>
    <div
      class="sc-AxhUy cgFciN"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Delegate PublicKey
        </div>
        <div
          class="font-semibold"
        >
          <span
            class="break-all"
          >
            +03df6cd794a7d404db4f1b25816d8976d0e72c5177d17ac9b19a92703b62cdbbbc
          </span>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ ml-6"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-AxhUy hoTjJf"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Transaction Fee
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
